# Airflow

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
crawler_practice/: db_utils.py  init_tables.sql  news_crawler.py  only_crawler.py
dags/: 10_dags_python_show_template.py  11_dags_python_template.py  12_dags_bash_with_macro.py  13_dags_python_with_macro.py  14_dags_python_with_xcom_1.py  15_dags_python_with_xcom_2.py  16_dags_bash_with_xcom.py  17_dags_bash_python_with_xcom.py  18_dags_bash_with_variable.py  1_dags_bash_operator.py  2_dags_bash_conn.py  3_dags_bash_external.py  4_dags_python_operator.py  5_dags_python_import.py  6_dags_python_decorator.py  7_dags_python_with_op_args.py  8_dags_python_with_op_kwargs.py  9_dags_bash_template.py  news_crawler_dag.py
